--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
     "stylus-loader": "^3.0.2"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "defaults.css": "^1.2.0",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
-    "preact-router": "^2.5.7"
+    "query-string": "^6.5.0"
   },
   "jest": {
     "verbose": true,
