--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
-    "query-string": "^6.5.0"
+    "query-string": "^6.5.0",
+    "react-helmet": "^5.2.1"
   },
   "jest": {
     "verbose": true,
