:construction: Add city list stub

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
   "extends": [ "standard", "standard-react" ],
   "rules": {
     "react/prop-types": 0,
-    "react/react-in-jsx-scope": 0
+    "react/react-in-jsx-scope": 0,
+    "import/no-webpack-loader-syntax": 0
   },
   "parser": "babel-eslint"
 }
