--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
     "preact-render-to-string": "^4.1.0",
+    "preact-virtual-list": "^0.3.1",
     "query-string": "^6.5.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-onclickoutside": "^6.8.0"
   },
   "jest": {
     "verbose": true,
