--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "defaults.css": "^1.2.0",
+    "eslint_d": "^8.0.0",
     "fontfaceobserver": "^2.1.0",
     "preact": "^8.2.6",
     "preact-compat": "^3.17.0",
